--- a/final_project/pnda_brazil.ipynb
+++ b/final_project/pnda_brazil.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,13 +70,23 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 24 entries, 0 to 23\n",
-      "Data columns (total 3 columns):\n",
-      "quarter             24 non-null object\n",
-      "region              24 non-null object\n",
-      "population_x1000    24 non-null int32\n",
-      "dtypes: int32(1), object(2)\n",
-      "memory usage: 352.0+ bytes\n"
+      "RangeIndex: 25 entries, 0 to 24\n",
+      "Data columns (total 13 columns):\n",
+      "NC     25 non-null object\n",
+      "NN     25 non-null object\n",
+      "D1C    25 non-null object\n",
+      "D1N    25 non-null object\n",
+      "D2C    25 non-null object\n",
+      "D2N    25 non-null object\n",
+      "D3C    25 non-null object\n",
+      "D3N    25 non-null object\n",
+      "D4C    25 non-null object\n",
+      "D4N    25 non-null object\n",
+      "MC     25 non-null object\n",
+      "MN     25 non-null object\n",
+      "V      25 non-null object\n",
+      "dtypes: object(13)\n",
+      "memory usage: 1.3+ KB\n"
      ]
     }
    ],
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +257,7 @@
        "4   72476  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +399,7 @@
        "4  2018Q1       Sul             24572"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +490,7 @@
        "5  2018Q1  Centro-Oeste              7499"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +593,7 @@
        "4  2018Q1       Sul  58.63"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +695,7 @@
        "2018Q4   170022         12936     45305  13822    73189  24771"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -791,7 +801,7 @@
        "2018Q4    92736          7800     21253   7326    41634  14723"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +909,7 @@
        "Sul            58.63   58.37   58.75   59.44"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,16 +933,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x552fc10>"
+       "<matplotlib.legend.Legend at 0x8f1aad0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -970,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
